# news_ddpenpal

./: .gitignore  README.md  config.json  main.py  pyproject.toml
src/hardware_heartbeat/: __init__.py  server.py
src/news_server/: server.py
