[project]
name = "hardware_heartbeat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.15.0",
    "psutil>=5.9.0",
    # 注意：build 通常是开发依赖，不应该放在项目依赖中
]

[project.scripts]
hardware-heartbeat = "hardware_heartbeat.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hardware_heartbeat"]